--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,19 +1,34 @@
 /* Fonts libraries */
-@import url('https://fonts.googleapis.com/css2?family=Bangers&family=Dancing+Script&family=Open+Sans+Condensed:ital,wght@1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bangers&family=Dancing+Script&family=Open+Sans+Condensed:ital,wght@1,300&family=Poiret+One&family=Righteous&display=swap');
 :root{
-    --main-font: "Open Sans Condensed", cursive;
-    --secondary-font:"Bangers", cursive;
+    --main-font: "Poiret One", cursive;
+    --secondary-font:"Righteous", cursive;
+    --main-color: #dc1873;
+    --light: #fff1e1; 
+    --dark : #1d3c45;
+}
+body{
+    background : var(--light);
 }
 h1{
     font-family:var(--secondary-font);
     font-weight:100;
+    color: var(--light);
+}
+header{
+    background:var(--dark);
 }
 p{
     font-family:var(--main-font);
+    font-size: 1.3em;
 }
 
 img{
-    width:30%;
+    width:100%;
     height:100vh;
-    object-fit:cover;
+    object-fit: contain;
+}
+
+a{
+    color: var(--main-color);
 }
