--- a/CSS/main.css
+++ b/CSS/main.css
@@ -18,3 +18,10 @@ img{
     object-fit:cover;
     margin: 10px;
 }
+header{
+    border: 2px solid black;
+    margin: 1;
+    padding: 5px;
+    background-color: burlywood;
+    
+}
