--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,14 +1,17 @@
+@import "experience.css";
+
 /* Fonts libraries */
 @import url('https://fonts.googleapis.com/css2?family=Bangers&family=Dancing+Script&family=Open+Sans+Condensed:ital,wght@1,300&family=Poiret+One&family=Righteous&display=swap');
 @font-face {
     font-family: 'Dodger';
     src:url('/Assets/webfonts_Dodger/Dodger.ttf.woff') format('woff'),
-        url('/Assets/webfonts_Dodger/Dodger.ttf.svg#Dodger') format('svg'),
-        url('/Assets/webfonts_Dodger/Dodger.ttf.eot'),
-        url('/Assets/webfonts_Dodger/Dodger.ttf.eot?#iefix') format('embedded-opentype'); 
+    url('/Assets/webfonts_Dodger/Dodger.ttf.svg#Dodger') format('svg'),
+    url('/Assets/webfonts_Dodger/Dodger.ttf.eot'),
+    url('/Assets/webfonts_Dodger/Dodger.ttf.eot?#iefix') format('embedded-opentype'); 
     font-weight: normal;
     font-style: normal;
 }
+
 :root{
     --main-font: "Poiret One", cursive;
     --h1:"Dodger";
@@ -18,7 +21,5 @@
     --dark : #1d3c45;
 }
 
-h1{
-    font-family: var(--h1);
-    font-size:2em;
-}
+/* Code Manuel */
+
