--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -1,3 +1,17 @@
-p{
-    font-family: var(--main-font);
+
+
+.icons {
+    display: flex;
+    flex-direction: row;
+    width: 50%;
+    justify-content: space-around;       
+    list-style:none;
+    margin-left:0;
+    padding-left:0;
+
+}
+
+
+#faq {
+    visibility: collapse;
 }
