--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -1,4 +1,9 @@
-
+.foot {
+    background-color: lightcoral;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
 
 .icons {
     display: flex;
@@ -8,10 +13,22 @@
     list-style:none;
     margin-left:0;
     padding-left:0;
+    font-size: 32px;
 
 }
 
+.title-faq {
+    width: 30%;
+    font-family: var(--main-font);
+    text-align: center;
+    font-size: 32px;
+    padding: 32px;
+}
 
-#faq {
-    visibility: collapse;
+.top {
+    width: 20%;
+    text-align: center;
+    font-size: 32px;
+    padding-top: 32px;
+    
 }
