--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -1,8 +1,15 @@
+body {
+    margin: 0;
+    padding: 0;
+}
+
+
 .foot {
     background-color: lightcoral;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
 }
 
 .icons {
@@ -22,13 +29,11 @@
     font-family: var(--main-font);
     text-align: center;
     font-size: 32px;
-    padding: 32px;
+    
 }
 
 .top {
     width: 20%;
     text-align: center;
     font-size: 32px;
-    padding-top: 32px;
-    
 }
