--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -25,6 +25,8 @@ body {
 }
 
 .title-faq {
+    border: lightcoral;
+    background-color: lightcoral;
     width: 30%;
     font-family: var(--main-font);
     text-align: center;
@@ -35,7 +37,6 @@ body {
 
 .hide {
     display: none;
-
 }
 
 .top {
@@ -64,5 +65,6 @@ body {
     font-size: 32px;
     font-weight: bold;
     font-family: var(--main-font);
+    padding-top: 16px;
 }
 
