--- a/CSS/experience.css
+++ b/CSS/experience.css
@@ -6,21 +6,135 @@
     font-family: var(--main-font);
     text-align: center;
     justify-content: center;
-    width: 45%;
-    line-height: 32px;
     letter-spacing: 2px;
-    /*border: 1px solid black;*/
+    
+    
 
+}
+
+.textDiplomes {
+    border: 1px solid black ;
 }
     
 
-.diplomesTitle {
+.expertiseFont {
+
+    font-family: var(--main-font);
+    text-align: center;
     justify-content: center;
+    letter-spacing: 2px;
+    border: 1px solid black;
+    
+
+
+}
+
+.diplomesTitle {
+    font-family: var(--main-font);
+    justify-content: center;
+    text-align: center;
 
 }
  
 
 .competencesTitle {
+    font-family: var(--main-font);
     justify-content: center;
+    text-align: center;
+    padding: 16px;
 }
 
+
+/* Fin code police*/
+
+
+.experience {
+
+    display: flex;
+    justify-content: inline-block;
+   
+}
+
+
+
+
+    .logos {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        letter-spacing: 32px;
+        padding : 32px 32px 32px 32px;
+        height: auto;
+        
+        
+        
+    }
+
+.logos i {
+
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 16px 16px 16px 16px;
+}
+
+
+ 
+    
+
+
+
+
+.delorean{
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+
+.delorean img {
+    display: flex;
+    width: 300px;
+    height: 300px;
+    padding: 0px 0px 0px 0px;
+    
+}
+
+
+
+
+
+
+
+
+    
+    
+/* Img = gif + image doc
+
+    img {
+        
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        
+        
+        
+    }
+
+    /* Delorean volante gif paramétrage 
+
+    .delorean {
+        display: flex-start;
+        justify-content: center;
+        width: 100%;
+    }
+    
+@media screen and (min-width: 360px  ) {
+
+    .delorean { 
+        text-align: center;
+        
+    }
+}
