--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -37,7 +37,18 @@ body {
 
 .hide {
     display: none;
+    animation: fadein 3.5s;
+    }
+@keyframes fadein {
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
 }
+
+
 
 .top {
     width: 20%;
