--- a/CSS/profile.css
+++ b/CSS/profile.css
@@ -34,6 +34,7 @@
 }
 h2{
     font-family: var(--secondary-font);
+    color: rgb(255, 122, 14);
 }
 @media screen and (min-width: 760px){
     #profile {
