--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -1,68 +1,3 @@
-    .contact_me {
-        background-color: teal;
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-        padding-bottom: var(--spacing);
-    }
-
-    form {
-        width: 90%;
-        margin: 0 auto
-    }
-
-    h2 {
-        font-family: "Righteous", cursive;
-        font-size: 40px;
-    }
-
-    .formulary {
-        width: 100%;
-        margin-bottom: 5px;
-        display: flex;
-        border-radius: 10px;
-        border: solid rgb(167, 211, 226);
-        padding-left: 5px;
-        transition: all 0.5s ease;
-        font-family: "Righteous", cursive;
-    }
-
-    .formulary:focus {
-        background-color: rgb(167, 211, 226);
-        color: white;
-    }
-
-    textarea {
-        display: flex;
-        width: 100%;
-        margin-bottom: 5px;
-        font-family: "Righteous", cursive;
-        border-radius: 10px;
-        border: solid rgb(167, 211, 226);
-        padding-left: 5px;
-        transition: all 0.5s ease;
-    }
-
-    button {
-        font-family: "Righteous", cursive;
-        cursor: pointer;
-        background-color: rgb(167, 211, 226);
-        color: white;
-        border: solid rgb(167, 211, 226);
-        margin-left: 5px;
-    }
-    
-    @media screen and (min-width: 426px) {
-        .contact_me {
-            width: 60%;
-        }
-    }
-
-    @media screen and (min-width: 1025px) {
-        .contact_me {
-            width: 30%;
-        }
-    }
-
-    
-
+body {
+    background-color: red;
+}
