--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -59,6 +59,7 @@ body {
 
 .question {
     font-family: var(--secondary-font);
+    padding: 16px;
     font-size: 16px;
     font-weight: bold;
     text-align: center;
@@ -67,6 +68,7 @@ body {
 .answer { 
     font-family: var(--main-font);
     font-size: 16px;
+    padding: 16px;
     text-align: center;
     font-weight: bold;
 }
@@ -77,6 +79,7 @@ body {
     font-weight: bold;
     font-family: var(--main-font);
     padding-top: 16px;
+    padding-bottom: 32px;
 }
 
 .atom {
