--- a/CSS/experience.css
+++ b/CSS/experience.css
@@ -1,18 +1,3 @@
-/* Code Manuel 
-*/ 
-
-/* Code pour l'ensemble CSS */
-
-
-
-* {
-    margin : 0px;
-}
-
-
-
-
-
 
 /* Code pour les paragraphes */
 
@@ -21,7 +6,7 @@
     text-align: center;
     justify-content: center;
     letter-spacing: 2px;
-    padding: 8px;
+    /* padding: 8px; */
 }
 
 
@@ -29,13 +14,13 @@
 
 
 .textDiplomes {
-    border: 1px solid black; 
+    /* border: 1px solid black;  */
     font-family: var(--main-font);
     text-align: center;
     justify-content: center;
     letter-spacing: 2px;
-    padding: 8px;
-    margin: 8px 8px 8px 8px;
+    /* padding: 8px;
+    margin: 8px 8px 8px 8px; */
 }
 
 
@@ -45,9 +30,9 @@
     text-align: center;
     justify-content: center;
     letter-spacing: 2px;
-    border: 1px solid black;
-    padding: 8px;
-    margin: 8px 8px 8px 8px;
+    /* border: 1px solid black; */
+    /* padding: 8px;
+    margin: 8px 8px 8px 8px; */
    
    
 
@@ -153,7 +138,7 @@
 
 
 
-@media screen and (max-width: 425px) {
+/* @media screen and (max-width: 425px) {
 
     .experience {
         width: 100%;
@@ -171,7 +156,7 @@
 }
 
 
-
+ */
 
 
 
@@ -180,7 +165,7 @@
 
 /* standard*/
 
-@media screen and (max-width: 768px) {
+/* @media screen and (max-width: 768px) {
 
     .experience {
         width: 100%;
@@ -198,7 +183,7 @@
 }
 
 
-
+ */
 
 
 
@@ -209,7 +194,7 @@
 /* Desktop*/
 
 
-@media screen and (max-width: 1024px) {
+/* @media screen and (max-width: 1024px) {
 
     .experience {
         width: 100%;
@@ -226,7 +211,7 @@
 
 }
 
-
+ */
 
 
 
