--- a/CSS/experience.css
+++ b/CSS/experience.css
@@ -79,15 +79,14 @@
 
 /* Paramètres Flexboxs */
 
-.experience {
+#experience {
 
     display: flex;
-    justify-content: inline-block;
+    justify-content: space-around;
+    align-items:center;
+    padding: 0 var(--spacing);
    
 }
-
-
-
 
     .logos {
         display: flex;
@@ -110,20 +109,12 @@
 }
 
 
-.delorean{
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
 
 
 .delorean img {
-    display: flex;
-    width: 300px;
-    height: 300px;
-    padding: 0px 0px 0px 0px;
+    width: 150px;
+    height: 150px;
+    object-fit:cover;
     
     
 }
