--- a/CSS/header.css
+++ b/CSS/header.css
@@ -6,6 +6,8 @@ header{
     border-bottom: var(--spacing) solid var(--main-color);
     background : var(--dark);
     position:fixed;
+    top:0;
+    left:0;
     width: 100%;
 }
 
