--- a/CSS/main.css
+++ b/CSS/main.css
@@ -27,6 +27,7 @@
     --spacing-large : calc(var(--spacing) * 4);
 }
 
+/* Document Resets */
 *{
     box-sizing:border-box;
 }
@@ -37,7 +38,14 @@ body {
 }
 
 section{
-    width:100vw;
+    width:100%;
     height:100vh;
     min-height:100vh;
+}
+
+section:nth-child(even){
+    background:green;
+}
+section:nth-child(odd){
+    background:blue;
 }
