--- a/CSS/experience.css
+++ b/CSS/experience.css
@@ -1,64 +1,24 @@
 
 /* Code pour les paragraphes */
 
-.fontXp {
+.fontXp, .textDiplomes, .expertiseFont {
     font-family: var(--main-font);
     text-align: center;
-    justify-content: center;
-    letter-spacing: 2px;
+
     /* padding: 8px; */
 }
 
-
-
-
-
-.textDiplomes {
-    /* border: 1px solid black;  */
-    font-family: var(--main-font);
-    text-align: center;
-    justify-content: center;
-    letter-spacing: 2px;
-    /* padding: 8px;
-    margin: 8px 8px 8px 8px; */
-}
-
-
-.expertiseFont {
-
-    font-family: var(--main-font);
-    text-align: center;
-    justify-content: center;
-    letter-spacing: 2px;
-    /* border: 1px solid black; */
-    /* padding: 8px;
-    margin: 8px 8px 8px 8px; */
-   
-   
-
-
-}
       
       
-
-
     /* Code pour les titres */
 
-    .competencesTitle {
-        font-family: var(--main-font);
-        justify-content: center;
-        letter-spacing: 2px;
+    .competencesTitle, .diplomesTitle {
+        font-family: var(--secondary-font);
         text-align: center;
         padding: 16px;
     }
     
-    .diplomesTitle {
-        font-family: var(--main-font);
-        justify-content: center;
-        text-align: center;
-        padding-top: 32px;
-    
-    }
+
      
     
 
@@ -93,7 +53,7 @@
         flex-wrap: wrap;
         justify-content: space-between;
         letter-spacing: 32px;
-        padding : 32px 32px 32px 32px;
+        padding : 32px;
         height: auto;
         
         
@@ -105,7 +65,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    padding: 16px 16px 16px 16px;
+    padding: 16px;
 }
 
 
