Commented out temporary background

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -45,9 +45,9 @@ section{
     min-height:100vh;
 }
 
-section:nth-child(even){
+/* section:nth-child(even){
     background:rgba(0, 128, 0, 0.474);
 }
 section:nth-child(odd){
     background:rgba(0, 0, 255, 0.542);
-}
+} */
