--- a/CSS/profile.css
+++ b/CSS/profile.css
@@ -27,7 +27,7 @@
     border-radius: 10%;
     margin-left: auto;
     margin-right: auto;
-    border: 5px solid rgb(255, 104, 142);
+    border: 5px solid var(--main-color);
     object-fit: cover;
     
     
