--- a/CSS/main.css
+++ b/CSS/main.css
@@ -41,13 +41,13 @@ body {
 
 section{
     width:100%;
-    height:100vh;
+    height:auto;
     min-height:100vh;
 }
 
-section:nth-child(even){
+/* section:nth-child(even){
     background:green;
 }
 section:nth-child(odd){
     background:blue;
-}
+} */
