--- a/CSS/experience.css
+++ b/CSS/experience.css
@@ -1,5 +1,5 @@
 
-/* Code pour les paragraphes, ici paramètre main ajouté mais à enlever si merge */
+/*  ici paramètre "main" ajouté mais à enlever si merge */
 
 
 main { 
@@ -54,6 +54,21 @@ main {
     padding: 0px;
 }
 
+/* gif entre les sections*/
+
+.delorean img {
+   
+    
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 30%;
+        border-radius: 100%;
+        padding-top: 16px;
+      
+    
+    
+}
 /* Media query, a supprimer si dispensable */
  
 @media screen and (max-width: 767px){
@@ -69,22 +84,10 @@ main {
 
    
 
-}
-
-/* gif entre les sections*/
-
-.delorean img {
    
-    
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        width: 20%;
-        border-radius: 100%;
-      
-    
-    
+
 }
+
 
 
 
