--- a/CSS/header.css
+++ b/CSS/header.css
@@ -40,6 +40,7 @@ header li{
     text-align: right;
 }
 header a{
+    font-family:var(--h1);
     text-decoration: none;
     padding:var(--spacing);
     color:var(--light);
