--- a/CSS/header.css
+++ b/CSS/header.css
@@ -18,7 +18,6 @@ header h1{
     font-weight:100;
     font-size:1.5em;
     color:var(--light);
-    width: max-content;
 }
 header p{
     font-family:var(--main-font);
@@ -118,6 +117,7 @@ header h1 a{
 
 @media screen and (min-width:426px){
     header h1{
+        width: max-content;
         font-size:2em;
     }
 }
@@ -142,5 +142,17 @@ header h1 a{
     }
     .hidden-desktop{
         display:none;
+    }
+    .infos-container{
+        position:absolute;
+        right: 0;
+        padding-right: var(--spacing);
+        display:flex;
+        flex-direction:row;
+        justify-content:space-between;
+        width:60%;
+    }
+    .infos-container p{
+        font-size:.8em;
     }
 }
