--- a/CSS/main.css
+++ b/CSS/main.css
@@ -15,6 +15,7 @@
     --h1:"MuseoModerno", cursive;
     --secondary-font: "Righteous", cursive;
     --main-color:rgb(255, 104, 142);
+    --secondary-color: rgb(255, 122, 14);
     --light: #fdf7ef; 
     --dark : #122429;
     --spacing : 8px;
@@ -44,7 +45,7 @@ section{
 
 h2, h3, h4, h5, h6{
     font-family: var(--secondary-font);
-    color: rgb(255, 122, 14);
+    color: var(--secondary-color);
 }
 
 p, ul, ol, li, a{
