ajout z index footer

--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -6,6 +6,7 @@
     justify-content: space-between;
     align-items: center;
     width:100%;
+    z-index: 1000;
 }
 .foot .fab, .foot .fas {
     color:var(--main-color);
