--- a/CSS/profile.css
+++ b/CSS/profile.css
@@ -1,10 +1,19 @@
 .text p{
+    padding: 0 var(--spacing);
     /* background-color: rgb(226, 218, 208); */
-    font-family: var(--main-font)
+    /* font-family: var(--main-font) */
+}
+#profile .img-profile{
+    width: 100%;
+    height: 100%;
+}
+#profile {
+    padding: 0;
 }
 
 #profile img{
     width: 100%;
+    height: 100vh;
     object-fit: cover; 
 }
 
@@ -13,7 +22,7 @@
         width: 250px;
     }
 } 
-@media screen and (min-width: 768px){
+@media screen and (min-width: 769px){
     #profile {
         display: flex;
         justify-content: space-between;
@@ -33,6 +42,7 @@
     }
     #profile img {
         height: 100%;
+        width: 100%;
         border: none;
         border-right: var(--spacing) solid rgb(255, 104, 142) ;
         border-radius: 0%;
