--- a/CSS/experience.css
+++ b/CSS/experience.css
@@ -10,18 +10,33 @@ main {
 /* Bloc expérience */
 #experience{
     text-align:center;
+    align-items: center;
+    
+    
+
 
 }
+
+#experience h2 {
+
+    order: 2;
+    padding-right: var(--spacing-medium);
+    
+}
+
 
 .work-experience h3{
     color: var(--dark);
     text-align:left;
 }    
+
+
 .work-experience li {
                  
-    text-align: start;
+    text-align: left;
     list-style: none;
     letter-spacing: 2px;
+    padding-left: var(--spacing-medium);
                     
 }
 
@@ -29,14 +44,14 @@ main {
 
     height: auto;
 }
-                
+         
                 
 .delorean img { 
     display: block;
     margin-right: auto;
     margin-left: auto;
-    width: 400px;
-    height:300px;
+    width: 350px;
+    height:250px;
     border-radius: 100%;
     
 }    
@@ -82,14 +97,19 @@ main {
 
     }      
 
-    
+
+    /* display flex du GIF si on reserre l'écran */
+    .delorean img {
+        display: flex;
+        margin-left: auto;
+        margin-right: auto;
+        flex-wrap: wrap;
+    }
     
 }    
 
 
 
 
-
-/* Section Experience professionnelles */
 
 
