--- a/CSS/main.css
+++ b/CSS/main.css
@@ -3,7 +3,7 @@
 @import "experience.css";
 @import "footer.css";
 @import "caroussel.css";
-@import "competences.css";
+@import "domaines-expertise.css";
 
 
 /* Fonts libraries */
