--- a/CSS/main.css
+++ b/CSS/main.css
@@ -47,16 +47,16 @@ section{
 }
 .sections-container{
     width:100%;
-    min-height: fit-content;
-    height:80%;
+    height:fit-content;
+    min-height:80%;
     display:flex;
     flex-wrap:wrap;
     align-items:center;
     justify-content:center;
     background-color: var(--light-transparent);
     padding:var(--spacing-medium);
-
 }
+
 h2, h3, h4, h5, h6{
     font-family: var(--secondary-font);
     color: var(--secondary-color);
