--- a/CSS/domaines-expertise.css
+++ b/CSS/domaines-expertise.css
@@ -1,40 +1,49 @@
-#competences .titre{
-    color: black;
-}
-#competences p{
-    text-align: left;
-    margin-left: 20px;
+
+#competences .titles{
+    background-image: url('../Assets/equation.png');
+    background-position: 50%;
+    background-size:cover;
+    width:100%;
+    display:flex;
+    justify-content:center;
 }
 
-@media screen and (min-width: 426px){
-#competences{
-    display: flex;
-    flex-direction: row-reverse;    
+#competences .competences-card{
+    margin-bottom:var(--spacing-large);
 }
-#competences h2{
-    margin-top: 0;
+#competences .header-card{
+    padding-top:var(--spacing-medium)
 }
+#competences .competences-card .fas{
+    font-size:2em;
 }
+#competences .competences-card h3{
+    color:var(--dark);
+    margin-top:0;
+}
+
+#competences .competences-card p{
+    text-align: justify;
+}
+
 @media screen and (min-width: 769px){
-#competences p{
-    /* padding: 0 var(--spacing); */
-    text-align: left;
-    margin-left: 5px;
-    padding: 0 30px 0 30px;
-}
-#competences h2{
-margin-top: 0;
+    #competences .sections-container{
+        max-height:fit-content;
+        flex-wrap:nowrap;
+    }
+    #competences .titles{
+        width:30%;
+        margin-right:var(--spacing);
+    }
+    #competences .content-container{
+        border-left: var(--spacing) solid var(--main-color);
+        display:flex;
+        flex-wrap:wrap;
+        justify-content:center;
+        align-items:center;
+    }
+    #competences .competences-card{
+        width:50%;
+        padding: 0 var(--spacing-medium);
+    }
 
-}
-#competences h3{
-    font-family: var(--secondary-font);
-    margin-top: 0;
-}
-#competences{
-    display: flex;
-    flex-direction: row-reverse;
-}
-#competences i{
-    margin: 0px;
-} 
-}
