--- a/CSS/main.css
+++ b/CSS/main.css
@@ -4,7 +4,7 @@
 @import "footer.css";
 @import "caroussel.css";
 @import "domaines-expertise.css";
-@import "competences-hobbies.css";
+@import "diplomes-hobbies.css";
 
 
 /* Fonts libraries */
@@ -60,6 +60,7 @@ section{
 h2, h3, h4, h5, h6{
     font-family: var(--secondary-font);
     color: var(--secondary-color);
+    text-transform: capitalize;
 }
 
 p, ul, ol, li, a{
@@ -74,6 +75,7 @@ ul{
 .titles{
     display:flex;
     align-items:center;
+    justify-content:center;
     height:150px;
     background-repeat:no-repeat;
     background-position: top;
@@ -83,18 +85,24 @@ ul{
     padding: var(--spacing-medium);
 }
 .paralax-wrapper{
-    background-image: url("../Assets/timetravel1.png");
     position:relative;
     background-size:cover;
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;  
 }
-
 #paralax2{
     background-image: url("../Assets/timetravel2.png");
 }
-  
+#paralax1{
+    background-image: url("../Assets/Maurice-Blaine-Delorean-600x369.png");
+}
+#paralax3{
+    background-image: url('../Assets/timetravel3.png');
+}
+#paralax4{
+    background-image: url('../Assets/docpicture.png')
+}  
 
 @media screen and (min-width: 769px){
     section{
@@ -105,6 +113,7 @@ ul{
     .sections-container{
         min-height:80%;
         max-height:90%;
+        flex-wrap:nowrap;
     }
     .content-container{
         width:70%;
