--- a/CSS/profile.css
+++ b/CSS/profile.css
@@ -7,7 +7,6 @@
     align-items:center;
     margin-bottom: var(--spacing-medium);
 }
-
 .text{
     padding-bottom:var(--spacing-medium);
 }
@@ -44,6 +43,7 @@
         flex-wrap:nowrap;
         justify-content: space-between;
         align-items:center;
+        margin-bottom: 0;
     }
     #profile .img-container{
         height:100vh;
